# recon-pilot

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  recon  scope.yaml  setup_venv.sh
docs/: Project_ReconPilot_Goals_Roadmap.md  ReconPilot_Full_Project_Overview_2025-10-05.md  ReconPilot_Jinja_Templates.md
recon_pilot/: __init__.py  cli.py  render.py  scope.py
recon_pilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
recon_pilot/modules/: ct.py
recon_pilot/rules/: recon_rules.yaml
recon_pilot/templates/: casefile.md.j2
